--- a/views/index.erb
+++ b/views/index.erb
@@ -2,4 +2,5 @@
 <form action="/checkout" method="post">
   <label for="item">ITEM</label>
   <input id="item" type="text" name="name" />
+  <input type="submit" id="submit">
 </form>
